# Literature-Review

./: .gitignore  README.md  pyproject.toml  requirements.txt  research_topic_guidance.txt
configs/: settings.env.example
scripts/: mvp.py
src/literature_review/: arxiv_fetcher.py  core.py  main.py  plotting_utils.py  semantic_scholar_fetcher.py
